INTERNAL: fix creating feature inputs - add null checks